--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-star-rating-component": "^1.4.1",
     "react-stars": "^2.2.5",
     "web-vitals": "^1.1.2"
   },
